Wed Jan  4 23:27:33 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/variables.s: Fix test.
	* area.c (c_area): Remove 2nd sanity check on AREA_REENTRANT.  Minor
	cleanup.
	* main.c (main): Adjust copyright year.

Fri Dec 30 19:00:39 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/local_label.s: Renamed to...
	* regression/tests_pass/local_label1.s: ...this.  Removed the :DEF:
	based tests.  Enhanced.
	* regression/tests_pass/local_label0.s: Add.
	* regression/tests_pass/local_label2.s: Add.
	* regression/tests_pass/local_label3.s: Add.
	* regression/tests_pass/local_label4.s: Add.
	* symbol.c (Symbol_CreateSymbolOut): Removed local label code.
	(symbolPrint): Fix printing out area symbol.
	* m_cpuctrl.c (m_adr): Evaluate all arguments even in pass one.
	* local.c, local.h: Complete rework.
	* lex.c: Follow local label API changes.
	* filestack.c (FS_GetMacroDepth): Add.
	(FS_PopPObject): Call Local_FinishMacro.
	* filestack.h (FS_GetMacroDepth): Add.
	* input.c, input.h (Input_LocalLabel): Removed.
	* get.c (getRhs): Evaluate all arguments even in pass one.
	* main.c (main): Check for errors just before output.

Fri Dec 30 03:13:56 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/fpe_immediate.s: Remove obsolete
	(and default now) option -autocast.
	* regression/tests_pass/fpe_literal.s: Likewise.
	* regression/tests_pass/fpe_memory.s: Likewise.

Thu Dec 22 17:46:30 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* asm.c (ASM_NextLine, ASM_DoPass): Simplify code a little bit.

Sat Dec 17 15:42:08 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* symbol.c (Symbol_CreateSymbolOut): Add warning for unused
	imported and undefined exported symbols.
	Move test on mapping symbols to...
	(NeedToOutputSymbol): ...here.  Properly test for
	SYMBOL_REFERENCE and SYMBOL_GLOBAL symbols for determining
	whether they should be outputed or not.
	* symbol.h (SYMBOL_REFERENCE, SYMBOL_GLOBAL): Update comments.
