@@ -1,7 +1,7 @@
 /*
  * AS an assembler for ARM
  * Copyright (c) 1992 Niklas Röjemo
- * Copyright (c) 2000-2011 GCCSDK Developers
+ * Copyright (c) 2000-2012 GCCSDK Developers
  * 
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -117,6 +117,58 @@ Value_Code (size_t len, const Code *code)
     };
   return value;
 }
+
+
+/**
+ * Resolve the defined value behind a ValueSymbol object.
+ * \return true When resolving failed.
+ */
+bool
+Value_ResolveSymbol (Value *valueP)
+{
+  /* Resolve all defined symbols and absolute area symbols.  */
+  /* FIXME: this can probably loop forever: label1 -> label2 -> label1 */
+  while (valueP->Tag == ValueSymbol /* Only replace symbols... */
+         && ((valueP->Data.Symbol.symbol->type & SYMBOL_DEFINED) != 0
+             || ((valueP->Data.Symbol.symbol->type & SYMBOL_AREA) != 0
+		 && (valueP->Data.Symbol.symbol->type & SYMBOL_ABSOLUTE) != 0)))
+    {
+      int offset = valueP->Data.Symbol.offset;
+      int factor = valueP->Data.Symbol.factor;
+      const Value *newValueP = &valueP->Data.Symbol.symbol->value;
+      switch (newValueP->Tag)
+	{
+	  case ValueBool:
+	  case ValueString:
+	    {
+	      if (factor != 1 || offset != 0)
+		return true;
+	      *valueP = *newValueP;
+	      break;
+	    }
+	  case ValueInt:
+	    *valueP = Value_Int (factor * newValueP->Data.Int.i + offset);
+	    break;
+	  case ValueFloat:
+	    *valueP = Value_Float (factor * newValueP->Data.Float.f + offset);
+	    break;
+	  case ValueAddr:
+	    {
+	      if (factor != 1)
+		return true;
+	      *valueP = Value_Addr (newValueP->Data.Addr.r, newValueP->Data.Addr.i + offset);
+	      break;
+	    }
+	  case ValueSymbol:
+	    *valueP = Value_Symbol (newValueP->Data.Symbol.symbol, factor * newValueP->Data.Symbol.factor, factor * newValueP->Data.Symbol.offset + offset);
+	    break;
+	  default:
+	    return true;
+	}
+    }
+  return false;
+}
+
 
 bool
 valueEqual (const Value *a, const Value *b)
